# whylabs

./: .gitignore  Makefile  pyproject.toml
examples/: example_entity_schema.py  example_monitor_config.py  example_monitor_schema_models.py
src/ai/whylabs/cli/: client.py  config.py  current.py  dataset_profiles.py  existing code gen.ipynb  manual code gen.ipynb  models.py
src/ai/whylabs/cli/.ipynb_checkpoints/: manual code gen-checkpoint.ipynb
tests/: test_schema.py
whylabs/helpers/: dataset_profiles.py  features.py  models.py  monitor_config.py  schema.py  utils.py
whylabs/monitor_schema/: __init__.py
whylabs/monitor_schema/models/: __init__.py  column_schema.py  commons.py  document.py  monitor.py  segments.py  utils.py
whylabs/monitor_schema/models/analyzer/: __init__.py  algorithms.py  analyzer.py  baseline.py  targets.py
